[INFER] Fix bogus assert and build break, bug 621487.